examples/good/in/02-01-arithmetic.see
void main() {
    int a = 21;
    int b = 15;

    int c = a + b; printInt(c); // c = 36
    int d = a - b; printInt(d); // d = 6
    d = a * b;     printInt(d); // d = 315
    d = a / b;     printInt(d); // d = 1

    return;
}
