examples/bad/in/02-01-arithmetic.see
void main() {
    printInt(1 / 0);
    printInt(21++15);

    return;
}